--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cryptr": "^6.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
